kustomize/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rpi-boinc-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      deployment: rpi-boinc
  template:
    metadata:
      labels:
        deployment: rpi-boinc
    spec:
      containers:
        - name: boinc-client
          image: docker.io/boinc/client:arm64v8
          ports:
            - containerPort: 31416
          resources:
            requests:
              cpu: "1000m"
              memory: "512Mi"
            limits:
              memory: "2048Mi"
          volumeMounts:
            - name: boinc-data
              mountPath: /var/lib/boinc
      volumes:
        - name: boinc-data
          emptyDir: {}
