kustomize/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: rpi-boinc-service
  namespace: default
spec:
  selector:
    deployment: rpi-boinc
  type: NodePort
  ports:
    - protocol: TCP
      port: 31416
      targetPort: 31416
      nodePort: 30007
