kustomize/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rpi-boinc-ingressroute
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`boinc.kubernetes.local`) && PathPrefix(`/boinc`)
      kind: Rule
      middlewares:
      - name: rpi-boinc-strip-prefix
        namespace: default
      services:
      - name: rpi-boinc-service
        namespace: default
        port: 31416
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rpi-boinc-strip-prefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /boinc
